# PyByntic

./: README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: custom-types.md  index.md  types.md  usage-examples.md
examples/: DateTime_with_TimeZone.py  basic.py  benchmark.py  compression.py  fixed_string.py  list.py  nested.py  nested_dict.py  nested_list.py  nullable.py  skip_column.py
protobuf_vs_pybyntic/: models.py  models_protobuf.py  pyproject.toml  test_protobuf.py  test_pybyntic.py  user.proto  user_pb2.py
pybyntic/: __init__.py  annotated_base_model.py  buffer.py  data_dumper.py  data_parser.py  types.py
tests/: conftest.py  test_backward_compatibility.py  test_basic.py  test_compression.py  test_list.py  test_nested.py  test_nested_dict.py  test_nested_list.py  test_nullable.py  test_types.py
