[project]
name = "pybyntictest"
version = "0.1.0"
description = ""
authors = [
    {name = "Yan Khachko",email = "a@slnk.icu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
